<resources>
    <!--mainActivity page-->
    <string name="app_name">"Crypto Exchange Rate "</string>
    <string name="error_message">
        Failed to get results. Please try again.
    </string>

    <!--CryptoAdapter-->
    <string name="default_text">TextView</string>
    <string name="crypto_currency">Crypto currency</string>
    <string name="crypto_currency_image">Crypto Currency image</string>
    <string name="forward_sign">Forward Sign</string>
    <string name="back_sign">Back Sign</string>

    <!--Coversation page-->
    <string name="foreign_label">Please enter a foreign currency amount</string>
    <string name="crypto_label">Please enter a crypto currency amount</string>
    <string name="foreign_currency_hint">Foreign currency</string>
    <string name="crypto_currency_hint">Crypto currency</string>
    <string name="crpto_currency_amount">crpto currency amount</string>
    <string name="foreign_currency_amount">foreign currency amount</string>
    <string name="crypto_default_Text">1.00</string>
    <string name="clear_button">Clear</string>
    <string name="default_foreignCurrencySymbol">₦</string>
    <string name="default_cryptoCurrencySymbol">BTC</string>

    <!--Menu-->
    <string name="refresh_button">Refresh</string>
</resources>
