<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sommy.android.cryptoexchangerate.Conversation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/foriegn_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/foreign_label"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/foreignSymbol_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/default_foreignCurrencySymbol" />

            <EditText
                android:id="@+id/foriegn_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/foreign_currency_hint"
                android:inputType="number" />

        </LinearLayout>

        <TextView
            android:id="@+id/cryptoAmount_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/crpto_currency_amount"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/crypto_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/crypto_label"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cryptoSymbol_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/default_cryptoCurrencySymbol" />

            <EditText
                android:id="@+id/crypto_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/crypto_currency_hint"
                android:inputType="number" />

        </LinearLayout>

        <TextView
            android:id="@+id/foriegnAmount_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:text="@string/foreign_currency_amount"
            android:textSize="16sp" />

        <Button
            android:id="@+id/clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:onClick="clearText"
            android:text="@string/clear_button" />

    </LinearLayout>

</ScrollView>
